<resources>
    <string name="app_name">RoomDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addbtn">addbtn</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="first_name_">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="john">John</string>
    <string name="_1">1</string>
    <string name="doe">Doe</string>
    <string name="_25">(25)</string>
    <string name="_25_">(25)</string>
    <string name="delete">Delete</string>
    <string name="deletedrag">Delete</string>
</resources>